# Colorful-Pixels

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  TODO.md  example_save_file.json  webbuild.sh
include/: Algorithms.hpp  Brush.hpp  BrushTool.hpp  Canvas.hpp  ColorPalette.hpp  ColorPickerTool.hpp  ColorSystem.hpp  ColorfulPixels.hpp  Cursor.hpp  Eraser.hpp  EraserTool.hpp  FillTool.hpp  IO.hpp  Layer.hpp  LayerSystem.hpp  LineTool.hpp  PanTool.hpp  Project.hpp  RectTool.hpp  ThemeLoader.hpp  Tool.hpp  ToolSystem.hpp  Viewport.hpp
res/Graphs/: ColorfulPixels_Architecture.drawio  ColorfulPixels_ArchitectureNew.drawio
res/layout/: default.ini  layout_default.ini  one.ini
res/sprites/: gui_tools_buttonspritesheet.aseprite
src/: Algorithms.cpp  Brush.cpp  BrushTool.cpp  Canvas.cpp  ColorPalette.cpp  ColorPickerTool.cpp  ColorSystem.cpp  ColorfulPixels.cpp  Cursor.cpp  Eraser.cpp  EraserTool.cpp  FillTool.cpp  IO.cpp  Layer.cpp  LayerSystem.cpp  LineTool.cpp  PanTool.cpp  Project.cpp  RectTool.cpp  ThemeLoader.cpp  ToolSystem.cpp  Viewport.cpp  main.cpp
